<resources>
    <string name="app_name">rB</string>


    <!-- Activity one-->
    <string name="cmpny_name_hint">Company</string>
    <string name="cmpny_password_hint">Password</string>
    <string name="btn_signup_hint">Sign Up</string>


    <!-- Activity two-->
    <string name="cmpny_phone_number_text">Company Phone Number</string>
    <string name="cmpny_phone_number_text_hint">Phone</string>
    <string name="cmpny_phone_number_verify_btn">Verify</string>

    <!-- Activity three-->
    <string name="welcome_text">Welcome to rB Pay Rebates to your clients efficiently</string>
    <string name="companies_list_text">Companies</string>

    <!-- Activity four-->
    <string name="cmpny_email_hint">.Company Email</string>
    <string name="cmpny_location_hint">Location</string>
    <string name="btn_create_new_company">Create</string>

    <!-- Navigation Drawer-->
    <string name="nav_rB">rB</string>
    <string name="nav_company">Company</string>
    <string name="nav_clients">Clients</string>
    <string name="nav_analyze">Analyze</string>
    <string name="nav_record">Record</string>
    <string name="nav_payments">Payments</string>
    <string name="nav_header_text">rb</string>
    <string name="nav_settings">Settings</string>

    <!--Activity NewCompany-->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="companies_text">Everything about the company</string>

    <!--Activity Clients-->
    <string name="clients_text">Everything about the clients</string>

    <!--Activity Analyze-->
    <string name="analyze_text">All rebates analysis</string>

    <!--Activity Record-->
    <string name="record_text">All clients records</string>

    <!--Activity Payments-->
    <string name="payments_text">All payment details</string>

</resources>
